--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "mern-stack-client",
+  "name": "myapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://memories-project-part4.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
@@ -12,7 +11,6 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "jwt-decode": "^3.1.2",
-    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -31,7 +29,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
